--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/sources/Styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gentium+Basic:wght@400;700&display=swap" rel="stylesheet">
+    <title>Mi web</title>    
 </head>
-<body>
-    <table border="1">
+<header background-color="#FFE01B">
+    <center><img src="/images/mailchimp-logo.png" alt="Background" width="10%"></center>
+    <center><h1>Planes de marketing de Mailchimp para empresas en crecimiento</h1></center>
+</header>
+<body>    
+    <table>
         <tr>
             <td>Premium</td>
             <td>Standard</td>
@@ -39,10 +47,10 @@
             <td>/mes*</td>
         </tr>
         <tr>
-            <td>Compra ahora</td>
-            <td>Compra ahora</td>
-            <td>Compra ahora</td>
-            <td>Registrate gratis</td>
+            <td bgcolor="#004E56"><a href="#"><p id="boton">Compra ahora</p></a></td>
+            <td bgcolor="#004E56"><a href="#"><p id="boton">Compra ahora</p></a></td>
+            <td bgcolor="#004E56"><a href="#"><p id="boton">Compra ahora</p></a></td>
+            <td bgcolor="#004E56"><a href="#"><p id="boton">Registrate gratis</p></a></td>
         </tr>
         <tr>
             <td>*Se aplican sobrecostes si se supera el límite de contactos o de envíos.
