--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/sources/Styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gentium+Basic:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gentium+Basic:wght@400;700&display=swap" rel="stylesheet">
     <title>Mi web</title>    
 </head>
 <header background-color="#FFE01B">
     <center><img src="/images/mailchimp-logo.png" alt="Background" width="10%"></center>
-    <center><h1>Planes de marketing de Mailchimp para empresas en crecimiento</h1></center>
+    <center><p>Planes de marketing de Mailchimp para empresas en crecimiento</p></center>
 </header>
 <body>    
     <table>
         <tr>
-            <td>Premium</td>
-            <td>Standard</td>
-            <td>Essentials</td>
-            <td>Free</td>            
+            <td><p id="titulo-plan">Premium</p></td>
+            <td><p id="titulo-plan">Standard</p></td>
+            <td><p id="titulo-plan">Essentials</p></td>
+            <td><p id="titulo-plan">Free</p></td>            
         </tr>
         <tr>
             <td>Funciones avanzadas para profesionales que necesitan más personalización</td>
@@ -35,10 +36,10 @@
             <td> </td>
         </tr>
         <tr>
-            <td>$ 299</td>
-            <td>$ 17</td>
-            <td>$ 11</td>
-            <td>$ 0</td>
+            <td><p id="precio"><sup>$</sup>299</p></td>
+            <td><p id="precio"><sup>$</sup>17</p></td>
+            <td><p id="precio"><sup>$</sup>11</p></td>
+            <td><p id="precio"><sup>$</sup>0</p></td>
         </tr>
         <tr>
             <td>/mes*</td>
@@ -47,10 +48,10 @@
             <td>/mes*</td>
         </tr>
         <tr>
-            <td bgcolor="#004E56"><a href="#"><p id="boton">Compra ahora</p></a></td>
-            <td bgcolor="#004E56"><a href="#"><p id="boton">Compra ahora</p></a></td>
-            <td bgcolor="#004E56"><a href="#"><p id="boton">Compra ahora</p></a></td>
-            <td bgcolor="#004E56"><a href="#"><p id="boton">Registrate gratis</p></a></td>
+            <td id="boton"><a href="#" class="link">Compra ahora</a></td>
+            <td id="boton"><a href="#" class="link">Compra ahora</a></td>
+            <td id="boton"><a href="#" class="link">Compra ahora</a></td>
+            <td id="boton"><a href="#" class="link">Registrate gratis</a></td>
         </tr>
         <tr>
             <td>*Se aplican sobrecostes si se supera el límite de contactos o de envíos.
@@ -70,8 +71,8 @@
         </tr>
         <tr>
             <td>
-                <ul>
-                    <li>SegSegmentación avanzada</li>
+                <ul id="lista">
+                    <li>Segmentación avanzada</li>
                     <li>Pruebas multivariantes</li>
                     <li>Informes comparativos</li>
                     <li>Puestos ilimitados y acceso basado en funciones</li>
@@ -79,7 +80,7 @@
                 </ul>
             </td>
             <td>
-                <ul>
+                <ul id="lista">
                     <li>Creador de recorridos de clientes + Punto de ramificación</li>
                     <li>Optimización del tiempo de envío</li>
                     <li>Redireccionamiento conductual</li>    
@@ -88,7 +89,7 @@
                 </ul>
             </td>
             <td>
-                <ul>
+                <ul id="lista">
                     <li>Plantillas para correo electrónico y páginas de destino</li>
                     <li>Creador de recorridos de clientes</li>                        
                     <li>Imagen corporativa personalizada</li>                        
@@ -98,13 +99,13 @@
                 </ul>
             </td>
             <td>
-                <ul>
+                <ul id="lista">
                     <li>CRM de marketing</li>
                     <li>Asistente Creativo</li> 
                     <li>Creador de sitios web</li>    
                     <li>Dominio de Mailchimp</li>
                     <li>Páginas de destino y formularios</li>
-                </ul>
+                </ul id="lista">
             </td>
         </tr>
         <tr>
