--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/sources/Styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gentium+Basic:wght@400;700&display=swap" rel="stylesheet">
@@ -71,7 +72,7 @@
         </tr>
         <tr>
             <td>
-                <ul id="lista">
+                <ul id="font-awesome">
                     <li>Segmentación avanzada</li>
                     <li>Pruebas multivariantes</li>
                     <li>Informes comparativos</li>
@@ -80,7 +81,7 @@
                 </ul>
             </td>
             <td>
-                <ul id="lista">
+                <ul id="font-awesome">
                     <li>Creador de recorridos de clientes + Punto de ramificación</li>
                     <li>Optimización del tiempo de envío</li>
                     <li>Redireccionamiento conductual</li>    
@@ -89,7 +90,7 @@
                 </ul>
             </td>
             <td>
-                <ul id="lista">
+                <ul id="font-awesome">
                     <li>Plantillas para correo electrónico y páginas de destino</li>
                     <li>Creador de recorridos de clientes</li>                        
                     <li>Imagen corporativa personalizada</li>                        
@@ -99,13 +100,13 @@
                 </ul>
             </td>
             <td>
-                <ul id="lista">
+                <ul id="font-awesome">
                     <li>CRM de marketing</li>
                     <li>Asistente Creativo</li> 
                     <li>Creador de sitios web</li>    
                     <li>Dominio de Mailchimp</li>
                     <li>Páginas de destino y formularios</li>
-                </ul id="lista">
+                </ul>
             </td>
         </tr>
         <tr>
