--- a/googleclone/index.html
+++ b/googleclone/index.html
@@ -3,31 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./sources/Styles.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li>
-                    <a href="#">Gmail</a>
-                </li>               
-                <li>
-                    <a href="#">Imágenes</a>
-                </li>
-                <li>
-                    <a href="#"><img src="./images/menu-icon.png" alt="menu-icon"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./images/profile.jpg" alt=""></a>
-                </li>
-            </ul>
+            <div class="nav-container">
+                <ul>
+                    <li>
+                        <a href="#">Gmail</a>
+                    </li>               
+                    <li>
+                        <a href="#">Imágenes</a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="redimension-menu" src="./images/menu-icon.png" alt="Icono Menú"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="redimension-menu" src="./images/profile.jpg" alt="Imagen de perfil"></a>
+                    </li>
+                </ul>
+            </div>            
         </nav>
     </header>
     <main>
-        <section>
-            <img src="./images/google-logo.png" alt="Logo de google">
+        <section id="seccion-logo">
+            <div>
+                <img  class="logo" src="./images/google-logo.png" alt="Logo de google">
+            </div>            
         </section>
         <section>
             <div><img src="" alt=""><input type="search"><img src="" alt=""></div>           
