--- a/googleclone/index.html
+++ b/googleclone/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-div">
             <div class="nav-container">
                 <ul>
                     <li>
@@ -22,24 +22,30 @@
                         <a href="#"><img class="redimension-menu" src="./images/menu-icon.png" alt="Icono Menú"></a>
                     </li>
                     <li>
-                        <a href="#"><img class="redimension-menu" src="./images/profile.jpg" alt="Imagen de perfil"></a>
+                        <a href="#"><img class="img-profile" src="./images/profile.jpg" alt="Imagen de perfil"></a>
                     </li>
                 </ul>
             </div>            
         </nav>
     </header>
     <main>
-        <section id="seccion-logo">
-            <div>
-                <img  class="logo" src="./images/google-logo.png" alt="Logo de google">
+        <section>
+            <div class="seccion-logo">
+                <img class="logo" src="./images/google-logo.png" alt="Logo de google">
             </div>            
         </section>
         <section>
-            <div><img src="" alt=""><input type="search"><img src="" alt=""></div>           
+            <div class="div-busqueda">
+                <input class="image-buscar" type="image" src="./images/search-icon.png" alt="">
+                <input class="buscador" type="search"><img src="" alt="">
+                <input class="image-voice" type="image" src="./images/google-voice.png" alt="">
+            </div>           
         </section>
         <section>
-            <button>Buscar con Google</button>
-            <button>Me siento con suerte</button>
+            <div class="div-botones">
+                <button class="botones">Buscar con Google</button>
+                <button class="botones">Me siento con suerte</button>
+            </div>            
         </section>
     </main>
     <footer>
