--- a/googleclone/index.html
+++ b/googleclone/index.html
@@ -50,22 +50,30 @@
     </main>
     <footer>
         <section>
-            <p>Argentina</p>
+            <div class="div-pais">
+                <p>Argentina</p>
+            </div>            
         </section>
         <section>
-            <ul>
-                <li><a href="#">Publicidad</a></li>
-                <li><a href="#">Plan de negocios</a></li>
-                <li><a href="#">Sobre Google</a></li>
-                <li><a href="#">Cómo funciona la búsqueda</a></li>
-            </ul>
-        </section>
-        <section>
-            <ul>
-                <li><a href="#">Privacidad</a></li>
-                <li><a href="#">Condiciones</a></li>
-                <li><a href="#">Preferencias</a></li>
-            </ul>
+            <div>
+                <div>
+                    <ul>
+                        <li><a href="#">Publicidad</a></li>
+                        <li><a href="#">Plan de negocios</a></li>
+                        <li><a href="#">Sobre Google</a></li>
+                        <li><a href="#">Cómo funciona la búsqueda</a></li>
+                    </ul>
+                </div>            
+            </section>
+            <section>
+                <div>
+                    <ul>
+                        <li><a href="#">Privacidad</a></li>
+                        <li><a href="#">Condiciones</a></li>
+                        <li><a href="#">Preferencias</a></li>
+                    </ul>
+                </div>            
+            </div>            
         </section>
     </footer>
 </body>
