--- a/googleclone/index.html
+++ b/googleclone/index.html
@@ -55,25 +55,23 @@
             </div>            
         </section>
         <section>
-            <div>
-                <div>
+            <nav class="div-footer">
+                <div class="nav-footer-izquierda">
                     <ul>
                         <li><a href="#">Publicidad</a></li>
                         <li><a href="#">Plan de negocios</a></li>
                         <li><a href="#">Sobre Google</a></li>
                         <li><a href="#">Cómo funciona la búsqueda</a></li>
                     </ul>
-                </div>            
-            </section>
-            <section>
-                <div>
+                </div>           
+                <div class="nav-footer-derecha">
                     <ul>
                         <li><a href="#">Privacidad</a></li>
                         <li><a href="#">Condiciones</a></li>
                         <li><a href="#">Preferencias</a></li>
                     </ul>
                 </div>            
-            </div>            
+            </nav>            
         </section>
     </footer>
 </body>
