--- a/googleclone/index.html
+++ b/googleclone/index.html
@@ -43,8 +43,8 @@
         </section>
         <section>
             <div class="div-botones">
-                <button class="botones">Buscar con Google</button>
-                <button class="botones">Me siento con suerte</button>
+                <button class="boton-buscarcongoogle">Buscar con Google</button>
+                <button class="boton-mesientoconsuerte">Me siento con suerte</button>
             </div>            
         </section>
     </main>
