--- a/header/index.html
+++ b/header/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header class="header">
-        <a href="#">
-            <img  class="logo" src="./src/Logo.png" alt="Logo de Menufy">
+        <a class="logo" href="#">
+            <img src="./src/Logo.png" alt="Logo de Menufy">
         </a>
-        <nav>
-            <ul class="menu">
+        <nav class="menu">
+            <ul class="menu-items">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Mis trabajos</a></li>
                 <li><a href="#">Sobre mí</a></li>
