--- a/header/prueba header_menu-right/index.html
+++ b/header/prueba header_menu-right/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+header_menu-center    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -12,18 +12,18 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="#">
-            <img src="./src/Logo.png" alt="Logo de Menufy">
+        <a href="#">
+            <img src="./src/Logo.png" alt="Logo de Menufy" class="logo">
         </a>
-        <nav class="menu">
-            <ul class="menu-items">
+        <nav>
+            <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Mis trabajos</a></li>
                 <li><a href="#">Sobre mí</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
-        <a class="boton-contacto" href="#">Contacto</a>
+        <a class="boton" href="#">Contacto</a>
     </header>
 </body>
 </html>
