--- a/header/header_menus/index.html
+++ b/header/header_menus/index.html
@@ -11,7 +11,7 @@
     <title>Headers</title>
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="logo-container">
             <a href="#">
                 <img class="logo" src="./src/Logo.png" alt="Logo de Menufy">
@@ -65,8 +65,8 @@
             <a href="#" class="boton">Contacto</a>
         </div>        
     </header>
-    <header class="header">
-        <div class="logo-container-order">
+    <header class="header"> -->
+        <!-- <div class="logo-container-order">
             <a href="#">
                 <img class="logo" src="./src/Logo.png" alt="Logo de Menufy">
             </a>
@@ -82,7 +82,7 @@
         <div class="boton-container">
             <a href="#" class="boton">Contacto</a>
         </div>        
-    </header>
+    </header> -->
     <header class="header">
         <div class="logo-container">
             <a href="#">
